compiler/tools/fpp-check/test/container/duplicate_id_explicit.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/container/duplicate_id_explicit.fpp:5.3
  product container C2 id 0x10
  ^
error: duplicate identifier value (16 dec, 10 hex)
previous occurrence is here:
[ local path prefix ]/compiler/tools/fpp-check/test/container/duplicate_id_explicit.fpp:3.3
  product container C1 id 0x10
  ^
